--- a/examples/caddy.yml
+++ b/examples/caddy.yml
@@ -7,6 +7,7 @@ exports:
 log_groups:
   - name: caddy
     subsystem: caddy
+    use_polling: false
     files:
       - /var/log/caddy/mysite-01.access.log
       - /var/log/caddy/mysite-02.access.log
