--- a/examples/caddy.yml
+++ b/examples/caddy.yml
@@ -9,8 +9,7 @@ log_groups:
     subsystem: caddy
     use_polling: false
     files:
-      - /var/log/caddy/mysite-01.access.log
-      - /var/log/caddy/mysite-02.access.log
+      - /tmp/muetsch.io.access.log
     labels:
       host: "{{.request.host}}"
       proto: "{{.request.proto}}"
