--- a/examples/caddy.yml
+++ b/examples/caddy.yml
@@ -1,5 +1,3 @@
-# Configuration example to parse and expose JSON-formatted request logs from Caddy webserver
-
 namespace: jsonlog
 exports:
   - name: default
@@ -7,11 +5,13 @@ exports:
 log_groups:
   - name: caddy
     subsystem: caddy
-    use_polling: false
     files:
-      - /tmp/muetsch.io.access.log
+      - /var/log/caddy/vaultwarden.access.log
+      # more
     labels:
       host: "{{.request.host}}"
+      client_ip: "{{.request.client_ip}}"
+      remote_ip: "{{.request.remote_ip}}"
       proto: "{{.request.proto}}"
       method: "{{.request.method}}"
       response: "{{.status}}"
